--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h2>About Our Foundation </h2>
     <div class="feature-container">
       <div class="feature-box">
-        <img src="assets/icons/cloud.svg" alt="Cloud" />
+        <img src="https://media.istockphoto.com/id/1211513704/vector/about-us-blue-typography-banner.jpg?s=612x612&w=0&k=20&c=S-ewuVmyuvs59kbU6EaQO2BL1D4HGJ0T_h-PUhLDXnU=" alt="Cloud" />
         <p> Al Massria Al Emaratia Foundation for Import, Export and Commercial Agencies was established in 2010 to facilitate global trade with Egypt as a strategic hub. We specialize in importing from worldwide markets to Egypt and exporting high-quality Egyptian products to international destinations, creating valuable business opportunities for our global partners.
 With deep knowledge of international markets and extensive global networks, we provide comprehensive services to help businesses navigate the complexities of worldwide trade. Our team of experts offers personalized solutions tailored to connect Egyptian businesses with global opportunities and bring international products to the Egyptian market.
 Our mission is to promote Egypt as a global trade gateway, contributing to the growth and prosperity of Egyptian businesses through strategic international partnerships and innovative trade solutions that connect Egypt with markets worldwide. </p>
