--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
       <div class="logo">
         <a href="index.html">
-          <img src="https://i.imgur.com/your-company-logo-header.png" alt="Company Logo" class="company-logo-header"> <!-- Placeholder for your actual header logo -->
+          <img src="https://drive.google.com/file/d/1wiFGDbrMMlvVb8yHK_iTfSJ5MwGNz2bJ/view?usp=sharing" class="company-logo-header"> <!-- Placeholder for your actual header logo -->
         </a>
       </div>
       <ul class="nav-links">
@@ -133,7 +133,7 @@
   <footer>
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="https://www.dropbox.com/scl/fi/1gi2z8ormi91xvplvl2q5/Al-Massriya-Al-Emaratiya-Logo-orginal-Photoroom.png?rlkey=q1hg5mz8atwjnhi53iqc59t0f&st=tdg9arnf&dl=0" alt="Company Logo" class="company-logo-footer"> <!-- Placeholder for your actual footer logo -->
+        <img src="https://drive.google.com/file/d/1wiFGDbrMMlvVb8yHK_iTfSJ5MwGNz2bJ/view?usp=sharing" alt="Company Logo" class="company-logo-footer"> <!-- Placeholder for your actual footer logo -->
       </div>
       <p>&copy; <span id="current-year"></span> Al Massria Al Emaratia | All Rights Reserved.</p>
       <div class="footer-links">
