--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Al Massria Al Emaratia - Global Trade Solutions</title>
   <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/1gi2z8ormi91xvplvl2q5/Al-Massriya-Al-Emaratiya-Logo-orginal-Photoroom.png?rlkey=q1hg5mz8atwjnhi53iqc59t0f&st=tdg9arnf&dl=0" /> <!-- Placeholder for your actual favicon -->
+  <link rel="icon" type="https://photos.app.goo.gl/QFzF1nPQAAw3vaaX9" /> <!-- Placeholder for your actual favicon -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -16,7 +16,7 @@
     <nav class="navbar">
       <div class="logo">
         <a href="index.html">
-          <img src="https://drive.google.com/file/d/1wiFGDbrMMlvVb8yHK_iTfSJ5MwGNz2bJ/view?usp=sharing" class="company-logo-header"> <!-- Placeholder for your actual header logo -->
+          <img src="https://photos.app.goo.gl/QFzF1nPQAAw3vaaX9" class="company-logo-header"> <!-- Placeholder for your actual header logo -->
         </a>
       </div>
       <ul class="nav-links">
@@ -133,7 +133,7 @@
   <footer>
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="https://drive.google.com/file/d/1wiFGDbrMMlvVb8yHK_iTfSJ5MwGNz2bJ/view?usp=sharing" alt="Company Logo" class="company-logo-footer"> <!-- Placeholder for your actual footer logo -->
+        <img src="https://photos.app.goo.gl/QFzF1nPQAAw3vaaX9" alt="Company Logo" class="company-logo-footer"> <!-- Placeholder for your actual footer logo -->
       </div>
       <p>&copy; <span id="current-year"></span> Al Massria Al Emaratia | All Rights Reserved.</p>
       <div class="footer-links">
