--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us - Al Massria Al Emaratia</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <!-- Header -->
@@ -60,7 +60,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2025 Egy-UAE. All Rights Reserved.</p>
+      <p>&copy; 2025 Al Massria Al Emaratia. All Rights Reserved.</p>
     </div>
   </footer>
 </body>
