--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <div class="footer-content">
       <div class="footer-logo">
         <!-- TODO: Replace with your actual logo path. Google Photos links can be unstable. -->
-        <img src="https://photos.app.goo.gl/QFzF1nPQAAw3vaaX9" alt="Al Massria Al Emaratia Company Logo" class="company-logo-footer"> 
+        <img src="https://media.licdn.com/dms/image/v2/D4E0BAQFmv89WqXXUhQ/company-logo_200_200/company-logo_200_200/0/1729355046941/al_massria_al_emaratia_for_import_export_and_commercial_agencies_logo?e=2147483647&v=beta&t=IgDmCVujrrsY3jPigHMLwFIJsv_9j6lEqkL0k_xqSRw" alt="Al Massria Al Emaratia Company Logo" class="company-logo-footer"> 
       </div>
       <p>&copy; <span id="current-year"></span> Al Massria Al Emaratia | All Rights Reserved.</p>
       <div class="footer-links">
